[tool.poetry]
name = "termwork4"
version = "0.1.0"
description = ""
authors = ["Nail Razakov Win10 <nailrazakov1982@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
isodate = "^0.6.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
